# headlines

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  buf.gen.yaml  buf.yaml  diesel.toml  docker-compose.yml
.cargo/: audit.toml
.github/workflows/: ci.yml
crates/headlines-api/: Cargo.toml
crates/headlines-api/src/: lib.rs  metrics.rs
crates/headlines-api/src/services/: account.rs  account_stream.rs  article.rs  draft.rs  event.rs  feed_follow.rs  feed_recommendation.rs  follow.rs  mod.rs  notification.rs  user.rs
crates/headlines-api/tests/: account_stream.rs  accounts.rs  articles.rs  drafts.rs  events.rs  feeds_follow.rs  feeds_recommendation.rs  follows.rs  notifications.rs  users.rs  workflow.rs
crates/headlines-auth/: Cargo.toml
crates/headlines-auth/src/: authorize.rs  interceptor.rs  lib.rs  metrics.rs  nonce.rs  postgres_resolver.rs  strategy.rs
crates/headlines-auth/src/algo/: mod.rs
crates/headlines-auth/src/time/: local_clock.rs  mod.rs  postgres_store.rs  tso.rs
crates/headlines-core/: Cargo.toml
crates/headlines-core/src/: auth.rs  error.rs  lib.rs  subject.rs  tso.rs
crates/headlines-core/src/repo/: account_stream.rs  accounts.rs  articles.rs  drafts.rs  events.rs  feed_follow.rs  feed_recommendation.rs  follows.rs  keys.rs  mod.rs  systems.rs  users.rs
crates/headlines-proto/: Cargo.toml  build.rs
crates/headlines-proto/src/: lib.rs
crates/headlines-rest-gateway/: Cargo.toml
crates/headlines-rest-gateway/src/: error.rs  lib.rs
crates/headlines-rest-gateway/tests/: rest_e2e.rs
crates/headlines-server/: Cargo.toml
crates/headlines-server/src/: cli.rs  config.rs  main.rs  metrics.rs  observability.rs  tailscale.rs
crates/headlines-server/src/seed/: articles.rs  content_md.rs  frontmatter.rs  keys.rs  mod.rs  plan.rs  runner.rs  state.rs
crates/headlines-server/tests/: binary_smoke.rs  binary_tailscale_smoke.rs  metrics_smoke.rs
crates/headlines-store/: Cargo.toml
crates/headlines-store/src/: lib.rs  schema.rs
crates/headlines-store/src/repo/: account_stream.rs  accounts.rs  articles.rs  drafts.rs  events.rs  feed_follow.rs  feed_recommendation.rs  follows.rs  keys.rs  mod.rs  users.rs
crates/headlines-store/tests/: smoke.rs
db/: schema.sql
demo/: README.md
demo/articles/opinion/: 000-in-defense-of-the-long-comment.md  001-why-i-still-use-make.md  002-the-quiet-erosion-of-on-call-quality.md  003-stop-optimizing-for-the-demo.md  004-in-defense-of-the-long-comment-revisited.md  005-why-i-still-use-make-part-2.md  006-the-quiet-erosion-of-on-call-quality-part-3.md  007-stop-optimizing-for-the-demo-in-practice.md  008-in-defense-of-the-long-comment-a-followup.md  009-why-i-still-use-make-refresh.md  010-the-quiet-erosion-of-on-call-quality-continued.md  011-stop-optimizing-for-the-demo-notes-from-the-field.md  012-in-defense-of-the-long-comment-a-year-later.md  013-why-i-still-use-make-lessons-learned.md  014-the-quiet-erosion-of-on-call-quality-q-a.md  015-stop-optimizing-for-the-demo-edge-cases.md  016-in-defense-of-the-long-comment-going-deeper.md  017-why-i-still-use-make-a-closer-look.md  018-the-quiet-erosion-of-on-call-quality-followup-notes.md  019-stop-optimizing-for-the-demo-a-counterpoint.md
demo/articles/techblog/: 000-how-diesel-handles-composite-primary-keys.md  001-postgres-replication-slots-and-the-tail-of-time.md  002-why-we-stopped-using-microservices-for-internal-tooling.md  003-the-case-for-boring-infrastructure.md  004-notes-on-building-a-small-cli-in-rust.md  005-how-diesel-handles-composite-primary-keys-revisited.md  006-postgres-replication-slots-and-the-tail-of-time-part-2.md  007-why-we-stopped-using-microservices-for-internal-tooling-part.md  008-the-case-for-boring-infrastructure-in-practice.md  009-notes-on-building-a-small-cli-in-rust-a-followup.md  010-how-diesel-handles-composite-primary-keys-refresh.md  011-postgres-replication-slots-and-the-tail-of-time-continued.md  012-why-we-stopped-using-microservices-for-internal-tooling-note.md  013-the-case-for-boring-infrastructure-a-year-later.md  014-notes-on-building-a-small-cli-in-rust-lessons-learned.md  015-how-diesel-handles-composite-primary-keys-q-a.md  016-postgres-replication-slots-and-the-tail-of-time-edge-cases.md  017-why-we-stopped-using-microservices-for-internal-tooling-goin.md  018-the-case-for-boring-infrastructure-a-closer-look.md  019-notes-on-building-a-small-cli-in-rust-followup-notes.md  020-how-diesel-handles-composite-primary-keys-a-counterpoint.md  021-postgres-replication-slots-and-the-tail-of-time-revisited.md  022-why-we-stopped-using-microservices-for-internal-tooling-part.md  023-the-case-for-boring-infrastructure-part-3.md  024-notes-on-building-a-small-cli-in-rust-in-practice.md  025-how-diesel-handles-composite-primary-keys-a-followup.md  026-postgres-replication-slots-and-the-tail-of-time-refresh.md  027-why-we-stopped-using-microservices-for-internal-tooling-cont.md  028-the-case-for-boring-infrastructure-notes-from-the-field.md  029-notes-on-building-a-small-cli-in-rust-a-year-later.md
demo/articles/tutorials/: 000-a-practical-introduction-to-grpc-for-backend-engineers.md  001-self-hosting-a-postgres-instance-with-wal-archiving.md  002-building-a-fault-tolerant-worker-queue-with-postgres.md  003-a-practical-introduction-to-grpc-for-backend-engineers-revis.md  004-self-hosting-a-postgres-instance-with-wal-archiving-part-2.md  005-building-a-fault-tolerant-worker-queue-with-postgres-part-3.md  006-a-practical-introduction-to-grpc-for-backend-engineers-in-pr.md  007-self-hosting-a-postgres-instance-with-wal-archiving-a-follow.md  013-self-hosting-a-postgres-instance-with-wal-archiving-q-a.md  (+16 more)
docs/: codelabs.md  implementation-issues.md  implementation-plan.md  tasks.md
docs/design/: account-stream.md  accounts.md  api-conventions.md  architecture.md  articles.md  auth.md  data-model.md  drafts.md  events.md  feed-follow.md  feed-recommendation.md  follows.md  notifications.md  users.md
docs/design-patches/: README.md
migrations/00000000000000_initial/: down.sql
(+110 files in other folders)
