[workspace]
resolver = "2"
members = [
    "crates/headlines-proto",
    "crates/headlines-core",
    "crates/headlines-store",
    "crates/headlines-auth",
    "crates/headlines-api",
    "crates/headlines-rest-gateway",
    "crates/headlines-server",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "Apache-2.0"
publish = false

[workspace.dependencies]
# --- Async / gRPC / HTTP ---
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "sync", "time"] }
tonic = "0.12"
tonic-build = "0.12"
tonic-types = "0.12"
prost = "0.13"
prost-build = "0.13"
prost-types = "0.13"
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "decompression-gzip"] }
hyper = "1"
http = "1"
http-body-util = "0.1"
bytes = "1"
tokio-stream = { version = "0.1", features = ["net"] }

# --- proto <-> JSON for the REST gateway ---
pbjson = "0.7"
pbjson-build = "0.7"
pbjson-types = "0.7"

# --- Database (Diesel) ---
diesel = { version = "2.2", features = ["postgres", "uuid", "chrono", "serde_json"] }
diesel-async = { version = "0.6", features = ["postgres", "deadpool"] }
deadpool = "0.12"
diesel_migrations = { version = "2.2", features = ["postgres"] }

# --- Crypto ---
ed25519-dalek = { version = "2", features = ["rand_core"] }
signature = "2"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"

# --- Auth helpers ---
async-trait = "0.1"
lru = "0.12"
parking_lot = "0.12"

# --- Identity / time / errors ---
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"

# --- Config / CLI / serde ---
figment = { version = "0.10", features = ["toml", "env"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Observability ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.28"

# --- Testing ---
tokio-test = "0.4"
serial_test = "3"

# --- Static lookup tables (proto-derived AUTH_TABLE) ---
phf = { version = "0.11", features = ["macros"] }
phf_codegen = "0.11"

# --- Internal crates ---
headlines-proto = { path = "crates/headlines-proto" }
headlines-core = { path = "crates/headlines-core" }
headlines-store = { path = "crates/headlines-store" }
headlines-auth = { path = "crates/headlines-auth" }
headlines-api = { path = "crates/headlines-api" }
headlines-rest-gateway = { path = "crates/headlines-rest-gateway" }
