[package]
name = "headlines-auth"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[lib]

[dependencies]
headlines-core.workspace = true
headlines-proto.workspace = true
headlines-store.workspace = true

# --- gRPC / HTTP / async ---
tonic.workspace = true
tower.workspace = true
hyper.workspace = true
http = "1"
http-body-util = "0.1"
bytes = "1"
tokio.workspace = true
async-trait.workspace = true

# --- Crypto ---
ed25519-dalek = { workspace = true, features = ["rand_core"] }
signature.workspace = true
sha2.workspace = true
base64.workspace = true
rand.workspace = true

# --- Identity / time / errors ---
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true

# --- Wire ---
prost.workspace = true
prost-types.workspace = true

# --- JSON (used to ship `Subject` over the trusted-listener metadata header) ---
serde_json.workspace = true

# --- LRU + Mutex ---
lru.workspace = true
parking_lot.workspace = true

# --- Static lookup tables (the `AUTH_TABLE` from `headlines-proto`) ---
phf.workspace = true

# --- Database (PostgresTsoStore uses headlines-store; diesel for the row) ---
diesel.workspace = true
diesel-async.workspace = true

# --- Logging ---
tracing.workspace = true

# --- Metrics ---
opentelemetry.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
serial_test.workspace = true
