[package]
name = "headlines-core"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[lib]

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tonic.workspace = true
tonic-types.workspace = true
prost.workspace = true
prost-types.workspace = true
