[package]
name = "headlines-proto"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[lib]

[dependencies]
prost.workspace = true
prost-types.workspace = true
tonic.workspace = true
serde = { workspace = true }
phf.workspace = true
headlines-core = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
prost-build = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
phf_codegen = { workspace = true }
