[package]
name = "headlines-rest-gateway"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[lib]

[dependencies]
headlines-proto.workspace = true
headlines-auth.workspace = true
headlines-core.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tonic.workspace = true
tonic-types.workspace = true
hyper.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
prost.workspace = true
prost-types.workspace = true
chrono.workspace = true
sha2.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["net"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
prost.workspace = true
ed25519-dalek = { workspace = true, features = ["rand_core"] }
sha2.workspace = true
rand.workspace = true
base64.workspace = true
uuid.workspace = true
diesel.workspace = true
diesel-async.workspace = true
headlines-api.workspace = true
headlines-auth.workspace = true
headlines-core.workspace = true
headlines-store.workspace = true
